--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
 <body>
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
+
+    <!-- Loader -->
+    <div class="loader" id="loader">
+        <img src="" alt="">
+    </div>
+
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1387&q=80">
+        <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80">
+    </div>
 </body>
 </html>
