added static image elements

--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
     </div>
 
     <!-- Image Container -->
-    <div class="image-container" id="image-container"></div>
+    <div class="image-container" id="image-container">
+      <img
+        src="https://images.unsplash.com/photo-1504192010706-dd7f569ee2be?ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80"
+      />
+      <img
+        src="https://images.unsplash.com/photo-1502318217862-aa4e294ba657?ixlib=rb-1.2.1&auto=format&fit=crop&w=2143&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1462332420958-a05d1e002413?ixlib=rb-1.2.1&auto=format&fit=crop&w=1940&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1501862700950-18382cd41497?ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80"
+        alt=""
+      />
+    </div>
   </body>
 </html>
